--- a/src/main/resources/templates/personal-score.html
+++ b/src/main/resources/templates/personal-score.html
@@ -81,6 +81,7 @@
         </el-col>
     </el-row>
     <el-table
+            ref="table"
             :header-cell-style="{background:'#F5F7FA',color:'#606266','text-align':'center'}"
             :data="tableData"
             :cell-style="{'text-align':'center'}"
@@ -169,7 +170,11 @@
         },
         mounted(){
             this.$nextTick(() => {
-                this.tableHeight = window.innerHeight - 793;
+                setTimeout(() => {
+                    this.tableHeight = window.innerHeight - (window.innerHeight-this.$refs.table.$el.offsetTop+20);
+                },100)
+                //此处需要通过延迟方法来设置值，不然会出现值已更新，但页面没更新的问题
+                //this.$refs.table.$el.offsetTop：表格距离浏览器的高度
             })
             this.accountType = this.getCookie('accountType');
             axios({
